# ConwaysGameOfLife

./: README.md  examples.py  pyproject.toml  testing_JQP_data.py  testing_JQP_final.py  testing_JQP_initial.py  testing_unittest_JQP_data.py
devenv/: pyvenv.cfg
devenv/Scripts/: activate  activate.bat
rplife/: __init__.py  __main__.py  grid.py  patterns.py  views.py
rplife.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
source_code_final/rplife.egg-info/: SOURCES.txt
